Updating build configuration. Trying it out.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ env:
     - JULIAVERSION="juliareleases"
     - JULIAVERSION="julianightlies"
 before_install:
-  - sudo add-apt-repository ppa:staticfloat/julia-deps -y
-  - sudo add-apt-repository ppa:staticfloat/${JULIAVERSION} -y
-  - sudo apt-get update -qq -y
-  - sudo apt-get install libpcre3-dev julia -y
+  - add-apt-repository ppa:staticfloat/julia-deps -y
+  - add-apt-repository ppa:staticfloat/${JULIAVERSION} -y
+  - apt-get update -qq -y
+  - apt-get install libpcre3-dev julia -y
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 script:
   - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.test("AdaptiveOptics")'
